gitops/platform-apps/termix/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: termix
  namespace: termix
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`termix.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: authentik
      services:
        - kind: Service
          name: termix
          namespace: termix
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: termix-netbird
  namespace: termix
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`termix.__ZONE_NAME__`)
      middlewares:
        - name: authentik-forwardauth
          namespace: authentik
      services:
        - kind: Service
          name: termix
          namespace: termix
          port: 80
